--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Garrett's Site</title>
-</head>
+---
+layout: default
+title: Garrett's Site
+---
 
-<body>
-<h1>Garrett's Blog</h1>
-</body>
-</html>
+Welcome!
+
+{% for post in site.posts limit:5 %}
+<h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+{{ post.content }}
+<em>Posted on {{ post.date | date_to_long_string }}.</em>
+{% endfor %}
