Oops. I bet index.markdown would work.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,7 @@ layout: default
 title: Garrett Robinson's Blog
 ---
 
-As you can see, things are a bit bare-bones around here.
-I just switched over to Jekyll (like a good hipster-hacker), and am
-in the process of designing myself a new site.
-
-In the meantime, here's my old [Posterous blog](http://codebread.posterous.com).
-I also do a lot of blogging [here](https://blog.honestappalachia.org).
+Welcome!
 
 {% for post in site.posts limit:5 %}
 <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
