--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@ layout: default
 title: Garrett Robinson's Blog
 ---
 
-Welcome!
-
-{% for post in site.posts limit:5 %}
+{% for post in site.posts %}
+{% if forloop.first %}
 <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
 {{ post.content }}
 <em>Posted on {{ post.date | date_to_long_string }}.</em>
+{% else %}
+<h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+{% endif %}
 {% endfor %}
