--- a/index.html
+++ b/index.html
@@ -1,14 +1,10 @@
 ---
-layout: default
+layout: home 
 title: Garrett Robinson's Blog
 ---
 
-{% for post in site.posts %}
-{% if forloop.first %}
-<h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-{{ post.content }}
-<em>Posted on {{ post.date | date_to_long_string }}.</em>
-{% else %}
-<h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-{% endif %}
-{% endfor %}
+<ul id="nav">
+    <li>> <a href="/archive.html">Writing</a></li>
+    <li>> <a href="https://github.com/handsomeransoms">Code</a></li>
+    <li>> <a href="/media/pdf/resume-2011.pdf">Resume</a></li>
+</ul>
