--- a/archive.html
+++ b/archive.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: archive 
 title: Writing
 ---
 
@@ -11,7 +11,7 @@ title: Writing
 </p>
 {% endfor %}
 
-<strong>Archive ({{site.posts | size}} posts)</strong>
+<h2>Archive ({{site.posts | size}} posts)</h2>
 <ol id="archive">
   {% for post in site.posts %}
   <li>
