--- a/archive.html
+++ b/archive.html
@@ -6,8 +6,8 @@ title: Writing
 {% for post in site.posts limit:1 %}
 <h2>Just posted: <a href="{{ post.url }}">{{ post.title }}</a></h2>
 <p>
-{{ post.content | truncatewords: 100 }}<br/>
-<a href="{{ post.url }}">Read More >>></a>
+{{ post.content | strip_html | truncatewords: 50}}<br/>
+<p><a href="{{ post.url }}">Read More >>></a></p>
 </p>
 {% endfor %}
 
