--- a/blog.html
+++ b/blog.html
@@ -6,8 +6,8 @@ title: Garrett Robinson's Blog
 {% for post in site.posts limit:1 %}
 <h2>Just posted: <a href="{{ post.url }}">{{ post.title }}</a></h2>
 <p>
-{{ post.content | strip_html | truncatewords: 50}}<br/>
-<p><a href="{{ post.url }}">Read More >>></a></p>
+{% comment %} hack to get the first paragraph of the post {% endcomment %}
+{{ post.content | split:'</p>' | first | strip_html }}
 </p>
 <a href="{{ post.url }}">Read More &raquo;</a>
 {% endfor %}
