--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 ---
-layout: home 
-title: Garrett Robinson's Homepage
+layout: index
+title: Garrett Robinson's Blog
 ---
 
-<div class="span7">
-  <p>This is the homepage of Garrett Robinson. I am a developer living in the Bay Area.</p>
-  <p>You can contact me by email at <a href="mailto:garrettr@riseup.net">garrettr@riseup.net</a>.
-  My code is on <a href="https://github.com/garrettr">Github</a>. My Twitter handle is @garrettrobin.
-</div>
-<div class="span5">
-  <h2>Recent Posts</h2>
-  <ol>
-    {% for post in site.posts %}
-    <li>
-    <p><a href="{{ post.url }}">{{ post.title }}</a></p>
-    <p>{{ post.date | date: "%B %m, %Y" }}</p>
-    </li>
-    {% endfor %}
-  </ol>
-</div>
+<h2>Posts</h2>
+<ol>
+  {% for post in site.posts %}
+  <li>
+  <p><a href="{{ post.url }}">{{ post.title }}</a></p>
+  <p>{{ post.date | date: "%B %m, %Y" }}</p>
+  </li>
+  {% endfor %}
+</ol>
+
+<h2>Contact</h2>
+<ul>
+<li><a href="mailto:garrettr@riseup.net">email</a></li>
+<li><a href="https://github.com/garrettr">github</a></li>
+<li><a href="https://twitter.com/garrettr_">twitter</a></li>
+</ul>
