add gpg public key

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ title: Garrett Robinson's Blog
 
 <h2>Contact</h2>
 <ul>
-<li><a href="mailto:garrettr@riseup.net">email</a></li>
+    <li><a href="mailto:garrettr@riseup.net">email</a> (<a href="static/garrettr@riseup.net.asc">pubkey</a>)</li>
 <li><a href="https://github.com/garrettr">github</a></li>
 <li><a href="https://twitter.com/garrettr_">twitter</a></li>
 </ul>
